clusters/managed/monitoring/portainer/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: &app portainer-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
