clusters/managed/monitoring/portainer/agent-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app portainer-agent
spec:
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      containers:
      - name: *app
        image: portainer/agent:2.33.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9001
          protocol: TCP
