clusters/managed/monitoring/portainer/agent-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app portainer-agent-headless
spec:
  clusterIP: None
  selector:
    app: portainer-agent
