clusters/managed/monitoring/portainer/agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app portainer-agent
spec:
  type: LoadBalancer
  selector:
    app: portainer-agent
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
