clusters/managed/monitoring/portainer/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app portainer
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://portainer.trusted.nirmalhk7.com"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/description: "Container management"
    gethomepage.dev/icon: portainer
    gethomepage.dev/app: portainer # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Portainer
    gethomepage.dev/weight: "10"
    gethomepage.dev/widget.type: "portainer"
    gethomepage.dev/widget.url: "http://portainer.mgd-monitoring.svc.cluster.local:9000"
    gethomepage.dev/widget.env: "1"
    gethomepage.dev/widget.kubernetes: "true"
    gethomepage.dev/widget.key: "${PORTAINER_API_KEY}"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=portainer"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`portainer.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
